feat: implement advanced search functionality with bucket filtering and global hotkeys
- Add support for search formats: `app/bucket`, `'app'/'bucket'` for exact match
- Implement bucket-limited and exact match filtering in search results
- Add global search hotkeys for quick input start
- Include search help modal with usage examples
- Add empty state for search page when no query
- Update UI components for better search experience
- Localize all new strings in English and Chinese
- Improve code comments and formatting scripts

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -112,7 +112,7 @@ jobs:
 
             **提示:**
             检测到项目未运行 \`pnpm i18n\` 或 \`pnpm format\`。
-            如果后续有新的commit，请记得运行\`git diff --name-only origin/develop | ForEach-Object { if ($_.Trim()) { npx prettier --write $_ } }\`
+            如果后续有新的commit，请记得运行 \`pnpm format:pr\` 格式化当前 PR 产生的所有更改文件。
 
             - \`pnpm i18n\` 并非强制，允许只在实际更改翻译键时运行 
             - \`pnpm format\` 格式化所有文件以确保代码风格一致
